RESOLVED FIXED164387
REGRESSION (r195004): Scripts and plugins blocked for subsequent loads in same WebContent process after receiving HTTP 0.9 response
https://bugs.webkit.org/show_bug.cgi?id=164387
Summary REGRESSION (r195004): Scripts and plugins blocked for subsequent loads in sam...
Daniel Bates
Reported 2016-11-03 16:31:14 PDT
If a page in tab A loads an HTTP 0.9 resource then script execution and plugins will be blocked in all subsequent loads in tab A.
Attachments
Patch and layout tests (21.76 KB, patch)
2016-11-08 10:12 PST, Daniel Bates
no flags
Patch and layout tests (21.70 KB, patch)
2016-11-09 14:09 PST, Daniel Bates
no flags
Radar WebKit Bug Importer
Comment 1 2016-11-03 16:31:39 PDT
Daniel Bates
Comment 2 2016-11-03 16:34:19 PDT
(In reply to comment #0) > If a page in tab A loads an HTTP 0.9 resource then script execution and > plugins will be blocked in all subsequent loads in tab A. I meant to add that we should only block script execution and plugins for a page requested on a default port that loads over HTTP 0.9.
Daniel Bates
Comment 3 2016-11-03 19:44:41 PDT
(In reply to comment #1) > <rdar://problem/29100985> Disregard this comment. This bug will be tracked by...
Daniel Bates
Comment 4 2016-11-03 19:44:49 PDT
Daniel Bates
Comment 5 2016-11-08 10:12:22 PST
Created attachment 294168 [details] Patch and layout tests This patch modifies the test results added in the patch for bug #164389. It also adds a new test to the directory added in the patch for bug #164389. The patch for bug #164389 has not landed as of the time of writing.
Daniel Bates
Comment 6 2016-11-09 14:09:38 PST
Created attachment 294287 [details] Patch and layout tests Rebased patch
WebKit Commit Bot
Comment 7 2016-11-09 14:12:21 PST
Attachment 294287 [details] did not pass style-queue: ERROR: Source/WebCore/dom/Document.cpp:6913: Document::shouldEnforceHTTP0_9Sandbox is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/WebCore/dom/Document.h:1400: shouldEnforceHTTP0_9Sandbox is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 2 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brent Fulgham
Comment 8 2016-11-09 14:43:18 PST
Comment on attachment 294287 [details] Patch and layout tests View in context: https://bugs.webkit.org/attachment.cgi?id=294287&action=review This is a great step in the right direction. Now we behave consistently on loads. Other bugs are being used to deal with the specific ShoutCast issue. > Source/WebCore/ChangeLog:24 > + Moreover, we only emit this console message when the document load is not blocked. Good! > LayoutTests/http/tests/security/http-0.9/default-port-plugin-blocked-expected.txt:-3 > -CONSOLE MESSAGE: Sandboxing 'http://127.0.0.1:8000/security/http-0.9/resources/nph-load-plugin-fail.pl' because it is using HTTP/0.9. Great!
Daniel Bates
Comment 9 2016-11-10 10:53:14 PST
Comment on attachment 294287 [details] Patch and layout tests Clearing flags on attachment: 294287 Committed r208549: <http://trac.webkit.org/changeset/208549>
Daniel Bates
Comment 10 2016-11-10 10:53:20 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.